syntax = "proto3";

package pb;

option go_package = "./pkg/pb";

message UserRequest {
    string name = 1;
    string email = 2;
    string cpf = 3;
    map<string, string> attributes = 4;
}